<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
       0
    </string>
    <string name="toast_button_text">Toast</string>
    <string name="count_button_text">Count</string>
    <string name="random_button_text">Random</string>
    <string name="hello_second_fragment">Hello second fragment.</string>
    <string name="random_heading">Here is a random number between 0 and %d.</string>
    <string name="rushi_kotamraju">Rushi_Kotamraju</string>
    <string name="todo">TODO</string>
    <string name="i_am">i am</string>
    <string name="todo1">TODO</string>

</resources>