<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    android:fillViewport="true"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screenBackground"
        android:padding="16dp">


        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/lorem_ipsum"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#333333"
            android:textSize="72sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />
        <ImageView
            android:layout_width="73dp"
            android:layout_height="75dp"
            android:src="@drawable/rejexts"
            tools:layout_editor_absoluteX="333dp"
            tools:layout_editor_absoluteY="3dp"
            android:contentDescription="@string/todo"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/random_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@color/buttonBackground"
            android:text="@string/random_button_text"
            android:textColor="#333333"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_first" />

        <Button
            android:id="@+id/toast_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:background="@color/buttonBackground"
            android:text="@string/toast_button_text"
            android:textColor="#333333"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/count_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_first"
            tools:ignore="UnknownId"
            app:layout_constraintHorizontal_bias="0" />

        <Button
            android:id="@+id/count_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_button_text"
            android:textColor="#333333"
            android:background="@color/buttonBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/random_button"
            app:layout_constraintStart_toEndOf="@+id/toast_button"
            app:layout_constraintTop_toBottomOf="@+id/textview_first"
            app:layout_constraintHorizontal_bias="0.5"/>

        <Button
            android:id="@+id/iam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="i am"
            app:layout_constraintTop_toBottomOf="@+id/count_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


<!--        <ImageView-->
<!--            android:id="@+id/batman"-->
<!--            android:layout_width="243dp"-->
<!--            android:layout_height="147dp"-->
<!--            android:src="@drawable/batman"-->
<!--            app:layout_constraintTop_toBottomOf="@id/textview_first"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
